--- a/components/landing/LandingPage.module.css
+++ b/components/landing/LandingPage.module.css
@@ -1285,7 +1285,7 @@
 }
 
 .canvas {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
